<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">eConBadge</string>
    <string name="nav_header_title">eConBadge HWId</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menuHome">Home</string>
    <string name="menuEInk">Image</string>
    <string name="menuBorder">LED Border</string>
    <string name="menuDisconnect">Disconnect</string>
    <string name="connecting_to_econbadge">Connecting to eConBadge</string>
    <string name="unable_to_connect_to_econbadge">Unable to connect to eConBadge</string>
    <string name="title_activity_connect">Badge Connection</string>
    <string name="prompt_ecb_identifier">Badge Identifier</string>
    <string name="prompt_ecb_token">Badge Token</string>
    <string name="action_sign_in">Connect</string>
    <string name="action_sign_in_short">Connect</string>
    <string name="invalid_identifier">Invalid identifier</string>
    <string name="invalid_token">Invalid token</string>
    <string name="connecting_please_wait">Connecting, please wait…</string>
    <string name="econbadge_logo">eConBadge Logo</string>
    <string name="connecting_your_econbadge">Connecting your eConBadge</string>
    <string name="bluetooth_permission_required">Bluetooth permission required</string>
    <string name="request_bluetooth_msg">Starting from Android 12, the system requires apps to be granted Bluetooth access in order to scan for and connect to BLE devices.</string>
    <string name="internet_permission_required">Internet permission required</string>
    <string name="request_internet_msg">Internet permissions are required for firmware update.</string>
    <string name="turn_on_the_econbadge">Turn on the eConBadge</string>
    <string name="go_to_system_and_then_bluetooth">Go to System and then Bluetooth</string>
    <string name="get_your_badge_identifier_and_token">Get your badge identifier and token</string>
    <string name="bluetooth_icon">Bluetooth Icon</string>
    <string name="software_version">Software Version</string>
    <string name="hardware_version">Hardware Version</string>
    <string name="update_token">Update Token</string>
    <string name="update">Update</string>
    <string name="update_owner">Update Owner</string>
    <string name="update_contact">Update Contact</string>
    <string name="check_for_firmware_update">Check for firmware update</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="unknown_software_version">Unknown software version</string>
    <string name="unknown_hardware_version">Unknown hardware version</string>
    <string name="token_size_requirement">Token must be 16 ASCII characters long.</string>
    <string name="failed_to_update_token_snack">Failed to update token: %1$s</string>
    <string name="success">Success</string>
    <string name="request_timed_out">Request timed out</string>
    <string name="communication_error">Communication error</string>
    <string name="device_not_connected">Device not connected</string>
    <string name="invalid_token_provided">Invalid token provided</string>
    <string name="unknown_error">Unknown error</string>
    <string name="token_updated_successfully">Token updated successfully.</string>
    <string name="invalid_command_parameter">Invalid command parameter</string>
    <string name="action_failed">Action failed</string>
    <string name="missing_initialization">Missing initialization</string>
    <string name="no_action">No action</string>
    <string name="invalid_command_size">Invalid command size</string>
    <string name="file_not_found">File not found</string>
    <string name="no_more_memory">No more memory</string>
    <string name="invalid_command_request">Invalid command request</string>
    <string name="maximal_number_of_command_reached">Maximal number of command reached</string>
    <string name="failed_to_update_the_image_name">Failed to update the image name</string>
    <string name="failed_to_open_file">Failed to open file</string>
    <string name="failed_to_write_file">Failed to write file</string>
    <string name="failed_to_read_file">Failed to read file</string>
    <string name="sending_failed">Sending failed</string>
    <string name="receiving_failed">Receiving failed</string>
    <string name="data_length_too_big">Data length too big</string>
    <string name="corrupted_data">Corrupted data</string>
    <string name="invalid_index">Invalid index</string>
    <string name="patterns_are_overlapping">Patterns are overlapping</string>
    <string name="owner_string_requirement">Owner must be at most 41 ASCII characters long</string>
    <string name="contact_string_requirement">Contact must be at most 41 ASCII characters long</string>
    <string name="failed_to_retrieve_owner">Failed to retrieve owner</string>
    <string name="failed_to_retrieve_contact">Failed to retrieve contact</string>
    <string name="failed_to_update_owner_snack">Failed to update owner: %1$s</string>
    <string name="failed_to_update_contact_snack">Failed to update contact: %1$s</string>
    <string name="checking_for_update">Checking for update…</string>
    <string name="downloading_firmware">Downloading firmware…</string>
    <string name="uploading_the_firmware">Uploading the firmware to the eConBadge…</string>
    <string name="awaiting_for_the_econbadge_to_reboot">Awaiting for the eConBadge to reboot…</string>
    <string name="update_failed_with_error">"Update failed with error: "</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="update_available">Update available</string>
    <string name="a_new_firmware_version_is_available">"A new firmware version is available:\n    - "</string>
    <string name="do_you_want_to_update">\n\nDo you want to update?</string>
    <string name="already_up_to_date">Already up to date</string>
    <string name="your_badge_already_has_the_latest_firmware_version">Your badge already has the latest firmware version.</string>
    <string name="ok">OK</string>
    <string name="incompatible_hardware">Incompatible hardware</string>
    <string name="the_current_hardware_is_incompatible">The current hardware is incompatible with the new firmware update.</string>
    <string name="failed_to_get_update_information">Failed to get update information</string>
    <string name="an_error_occurred_while_trying_to">An error occurred while trying to retrieve firmware update information. Please try again later</string>
    <string name="factory_reset_success">Factory reset success, awaiting eConBadge to reconnect.</string>
    <string name="factory_reset_failed">Factory reset failed: %1$s</string>
    <string name="loading" tools:ignore="PrivateResource">Loading…</string>
    <string name="confirm_factory_reset">Confirm factory reset? This will erase all data from the eConBadge.</string>
    <string name="factory_reset_in_progress">Factory reset in progress…</string>
    <string name="about">About</string>
    <string name="econbadge_about_title">eConBadge | Version 0.3.1</string>
    <string name="econbadge_about_text">E-Ink Convention Badge | Connected badge to display your favorite images and texts at conventions. Created by Alexy Torres Aurora Dugo.\n\nThe source code and hardware used for the eConBadge is open source and can be found on GitHub: <a href="https://github.com/Oxmose/EConBadge">https://github.com/Oxmose/EConBadge</a></string>
    <string name="econbadge">eConBadge</string>
    <string name="econbadge_hwuid">eConBadge %1$s</string>
    <string name="current_image">Current Image</string>
    <string name="clear_image">Clear Image</string>
    <string name="add_a_new_image">Add a New Image</string>
    <string name="image">Image</string>
    <string name="failed_to_retrieve_current_image">Failed to retrieve current image</string>
    <string name="no_image_loaded">No image loaded</string>
    <string name="retrieving_data_please_wait">Retrieving data, please wait…</string>
    <string name="retrieving_data">Retrieving data…</string>
    <string name="eink_display">EInk display</string>
    <string name="clearing_eink_display">Clearing EInk display…</string>
    <string name="failed_to_clear_eink_display">Failed to clear EInk display: %1$s</string>
    <string name="loading_image_list">Loading image list…</string>
    <string name="error_with_info">Error: %1$s</string>
    <string name="retrieve_image_preview">Retrieve Image Preview</string>
    <string name="display_this_image">Display this image</string>
    <string name="remove_this_image">Remove this image</string>
    <string name="failed_to_set_image">Failed to set image</string>
    <string name="an_error_occurred_while_setting_image_template">An error occurred while trying to update the image: %1$s</string>
    <string name="an_error_occurred_while_getting_image_template">An error occurred while trying to retrieve the image: %1$s</string>
    <string name="updating_image">Updating image…</string>
    <string name="setting_new_image">Setting new image…</string>
    <string name="downloading_image_preview">Downloading image preview</string>
    <string name="downloading_image_preview_please_wait">Downloading image preview, please wait…</string>
    <string name="failed_to_retrieve_image">Failed to retrieve image</string>
    <string name="an_error_occurred_while_removing_image_template">An error occurred while removing the image: %1$s</string>
    <string name="removing_image">Removing image</string>
    <string name="removing_image_please_wait">Removing image, please wait…</string>
    <string name="failed_to_remove_image">Failed to remove image</string>
    <string name="remote_storage">Remote Storage</string>
    <string name="local_storage">Local Storage</string>
    <string name="cancel" tools:ignore="PrivateResource">Cancel</string>
    <string name="send_to_econbadge">Send to eConBadge</string>
    <string name="validate_image">Validate Image</string>
    <string name="image_name">Image Name</string>
    <string name="the_image_name_you_specified_already_exists">The image name you specified already exists, overwrite the existing image?</string>
    <string name="image_overwrite">Image overwrite</string>
    <string name="crop_image">Crop Image</string>
    <string name="dithered_image">Dithered Image</string>
    <string name="image_too_small">The image is too small, you must select images with resolution of at least %1$dx%2$d.</string>
    <string name="image_is_invalid">Image is invalid.</string>
    <string name="image_does_not_exist">Image does not exist.</string>
    <string name="error">Error</string>
    <string name="error_while_loading_image">Error while loading image: %1$s</string>
    <string name="imported_image">Imported image</string>
    <string name="diffusion">Diffusion: %1$d%%</string>
    <string name="this_feature_is_experimental_for_better_results">This feature is experimental. For better results, read the documentation about preparing your images in the ECB format before loading them in the application.</string>
    <string name="an_error_occurred_when_saving_the_image">An error occurred when saving the image.</string>
    <string name="select">Select</string>
    <string name="crop">Crop</string>
    <string name="dithering">Dithering</string>
    <string name="import_txt">Import</string>
    <string name="click_the_select_button_to_start_importing">Click the Select button to start importing</string>
    <string name="dithering_diffusion_100">Dithering diffusion: 100%</string>
    <string name="apply_dithering">Apply Dithering</string>
    <string name="unnamed">Unnamed</string>
    <string name="add_a_new_animation">Add a new animation</string>
    <string name="add_animation">Add animation</string>
    <string name="name">Name</string>
    <string name="add_a_new_pattern">Add a new pattern</string>
    <string name="add_pattern">Add pattern</string>
</resources>