<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/navMainGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menuHome" />
        <item
            android:id="@+id/navEInk"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menuEInk" />
        <item
            android:id="@+id/navBorder"
            android:icon="@drawable/ic_menu_ledborder"
            android:title="@string/menuBorder" />
    </group>

    <group
        android:id="@+id/navDisconnectGroup"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navDisconnect"
            android:icon="@drawable/ic_menu_disconnect"
            android:title="@string/menuDisconnect" >
        </item>
    </group>
</menu>