<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navHome">

    <fragment
        android:id="@+id/navHome"
        android:name="dev.olsontek.econbadge.ui.home.HomeFragment"
        android:label="@string/menuHome"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navEInk"
        android:name="dev.olsontek.econbadge.ui.eink.EInkFragment"
        android:label="@string/menuEInk"
        tools:layout="@layout/fragment_eink" />

    <fragment
        android:id="@+id/navBorder"
        android:name="dev.olsontek.econbadge.ui.slideshow.SlideshowFragment"
        android:label="@string/menuBorder"
        tools:layout="@layout/fragment_slideshow" />
</navigation>