<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.eink.ImageImportActivity">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelImportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:layout_margin="16dp"
        android:backgroundTint="@color/red_400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="PrivateResource" />

    <!-- Current action buttons -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/stepsButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/selectImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/cropImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/ditherImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dithering"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/importImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_txt"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetStart="16dp"
        android:layout_marginTop="8dp"
        app:dividerInsetEnd="16dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/startImportTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/click_the_select_button_to_start_importing"
                android:layout_gravity="center"
                />

            <!-- Crop actions -->
            <LinearLayout
                android:id="@+id/cropImageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="12dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.canhub.cropper.CropImageView
                        android:id="@+id/cropImageView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/validateCropButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:enabled="true"
                    android:text="@string/crop_image"
                    android:textAlignment="center" />


            </LinearLayout>


            <!-- Dithering actions -->
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/ditherImageLayout"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="12dp"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ditherImageView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:contentDescription="@string/dithered_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.slider.Slider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tooltipText="Diffusion"
                    android:id="@+id/ditherImageDiffusionSlider"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/ditherImageDiffusionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dithering_diffusion_100"
                    android:layout_gravity="center"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:text="@string/this_feature_is_experimental_for_better_results"
                    android:layout_gravity="center"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/validateDitherButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:enabled="true"
                    android:text="@string/apply_dithering"
                    android:textAlignment="center" />

            </LinearLayout>

            <!-- Import actions -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="12dp"
                android:id="@+id/importImageLayout"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/importImageView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:contentDescription="@string/imported_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/image_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/imageNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints=""
                        android:inputType="text"
                        android:selectAllOnFocus="true"

                        android:text="" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/sendToBadgeCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/send_to_econbadge"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/validateImportButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:enabled="true"
                    android:text="@string/validate_image"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>