<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.EConBadge"
    tools:context=".ui.login.ConnectActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        style="?attr/materialCardViewElevatedStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/econbadge_logo"
                app:srcCompat="@drawable/ecb_logo"
                android:scaleType="fitCenter"
                android:layout_marginBottom="16dp"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connecting_your_econbadge"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="1"
                    android:textColor="#333"
                    android:background="@drawable/circle"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:elevation="2dp"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_on_the_econbadge"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="2"
                    android:textColor="#111"
                    android:background="@drawable/circle"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:elevation="2dp"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_to_system_and_then_bluetooth"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="3"
                    android:textColor="#111"
                    android:background="@drawable/circle"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:elevation="2dp"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_your_badge_identifier_and_token"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/prompt_ecb_identifier"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/ecbTokenTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ecbIdentifierEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/prompt_ecb_identifier"
            android:inputType="text"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ecbTokenTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/prompt_ecb_token"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/connectButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ecbTokenEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/prompt_ecb_token"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:textColor="#fff"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/connectButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:enabled="true"
        android:text="@string/action_sign_in"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>